Retirei uns excessos, desisti de tentar configuar o pom pra usar o Java EE junto