@@ -9,10 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <compilerargs>
-            <arg>java --add-modules</arg>
-            <arg>java.xml.bind</arg>
-        </compilerargs>
     </properties>
     <build>
         <plugins>
